force-app/main/default/objects/maps__Analytic__c/maps__Analytic__c.object-meta.xml
<CustomObject>
    <label>Maps Analytic</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Maps Analytic</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>