force-app/main/default/objects/maps__Analytic__c/fields/maps__DateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>