force-app/main/default/objects/maps__Analytic__c/fields/maps__LayerName__c.field-meta.xml
<CustomField>
    <fullName>maps__LayerName__c</fullName>
    <formula>IF(NOT(ISBLANK(maps__FavoriteLocation__c)), maps__FavoriteLocation__r.Name,
     IF(NOT(ISBLANK( maps__MapsLayer__c )), maps__MapsLayer__r.Name, 
          IF(NOT(ISBLANK( maps__SavedQuery__c )), maps__SavedQuery__r.Name,
               IF(NOT(ISBLANK( maps__ShapeLayer__c )),  maps__ShapeLayer__r.Name,
                    &apos;Unknown&apos;
               )
          )
     ) 
)</formula>
    <label>Layer Name</label>
    <type>Text</type>
</CustomField>