force-app/main/default/objects/maps__Analytic__c/fields/maps__MapsLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__MapsLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Layer</label>
    <referenceTo>maps__Layer__c</referenceTo>
    <relationshipLabel>Maps Analytics</relationshipLabel>
    <relationshipName>Maps_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>