force-app/main/default/objects/maps__Analytic__c/fields/maps__SavedQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__SavedQuery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saved Query</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Maps Analytics</relationshipLabel>
    <relationshipName>Maps_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>