force-app/main/default/objects/maps__Analytic__c/fields/maps__SubType__c.field-meta.xml
<CustomField>
    <fullName>maps__SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marker Layer</fullName>
            </value>
            <value>
                <fullName>Shape Layer</fullName>
            </value>
            <value>
                <fullName>Data Layer</fullName>
            </value>
            <value>
                <fullName>Favorite Location</fullName>
            </value>
            <value>
                <fullName>ArcGIS Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>