force-app/main/default/objects/maps__Analytic__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plot Layer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>